<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rhythm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 所有 -->
    <string name="hyperbaric">高压</string>
    <string name="low">低压</string>
    <string name="heart_rate">心率</string>
    <string name="measure">测量</string>
    <string name="connection_null">未连接</string>
    <string name="search">搜索</string>
    <string name="measure_data">测量数据</string>
    <string name="set">设置</string>

    <!-- 测量 -->
    <string name="mea_mmHg">mmHg</string>
    <string name="mea_bmin">b/min</string>
    <string name="mea_start">开始测量</string>
    <string name="mea_stop">停止测量</string>

    <!-- 节律仪设置 -->
    <string name="set_rhythm">节律仪设置</string>
    <string name="set_device">设备设置</string>
    <string name="set_cu_measure">连续测量</string>
    <string name="set_measure_time">连续测量时段</string>
    <string name="set_measure_set">测量设置</string>
    <string name="set_beep">用户切换提示音</string>
    <string name="set_click_open">点击打开</string>
    <string name="set_ay_open">已打开</string>

</resources>