<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_null"
                android:textSize="@dimen/tab_text" />
            
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/measure"
                android:textSize="@dimen/tab_text" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:button="@null"
                android:text="@string/search"
                android:textSize="@dimen/tab_text" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <RadioGroup
            android:id="@+id/rg_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_measure"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/measure"
                android:textSize="@dimen/tab_text" />

            <RadioButton
                android:id="@+id/rb_data"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/measure_data"
                android:textSize="@dimen/tab_text" />

            <RadioButton
                android:id="@+id/rb_set"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/set"
                android:textSize="@dimen/tab_text" />
        </RadioGroup>
    </LinearLayout>

</TabHost>